--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,7 +27,7 @@ button:hover {
     color: #fff;
 } 
 
-/* HEADER */
+
 header{
     padding: 30px 4%;
 }
@@ -77,7 +77,7 @@ header a:hover{
     transition: 0.4s;
 } 
 
-/* TOPO */
+
 section.topo{
     padding: 20px 4%;
 }
@@ -174,7 +174,6 @@ section.services .flex {
 }
 
 
-/* SOBRE */
 section.about{
     padding: 40px 4% 80px 4%;
 }
@@ -233,26 +232,56 @@ section.about .flex {
 }
 
 
-/* PORTFOLIO */
 section.portfolio {
     padding: 80px 4%;
-    box-shadow: 0 0 40px 10px #ffffff1d;
+    box-shadow: 0 0 40px 10px #ffffff46;
 }
 
 section.portfolio .flex {
     justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 50px;
+
+}
+
+section.portfolio h2 {
+    margin-bottom: 60px;
 }
 
 .img-port {
-    width:360px;
+    width: 360px;
     height: 460px;
     background-size: cover;
     background-position: 100% 0%;
     transition: background 8s;
-    cursor: all-scroll;
-    border-radius: 25px;
+    cursor: pointer;
+    border-radius: 30px;
+    position: relative;
 }
 
 .img-port:hover {
     background-position: 100% 100%;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    color: #fff;
+    font-weight: 600;
+    background-color: #000000b8;
+    transition: .5s;
+    opacity: 0;
+    text-align: center;
+} 
+
+.overlay:hover {
+    opacity: 1;
 }
