--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,11 @@
     --color-main: #1063fd; 
 }
 
+.mobile-menu-icon, .mobile-menu{
+    display: none;
+}
+
+
 .interface {
     max-width: 1280px;
     margin: 0 auto;
@@ -115,7 +120,6 @@ section.topo .image-topo{
 }
 section.topo .image-topo img{
     width: 300px;
-
     transform: translateY(0px);
 }
 
@@ -137,7 +141,6 @@ section.topo .image-topo img{
 /* services */
 section.services {
     padding: 20px 4%;
-
 }
 
 section.services .flex {
@@ -200,7 +203,7 @@ section.about .flex {
 
 .about .txt-about p {
     margin: 30px 0;
-    text-align: justify;
+    text-align: left;
     font-size: 20px;
 }
 
@@ -222,6 +225,7 @@ section.about .flex {
 .about .txt-about {
     width: 60%;
 }
+
 .about .img-about {
     width: 30%;
 }
@@ -249,6 +253,7 @@ section.portfolio h2 {
 }
 
 .img-port {
+
     width: 360px;
     height: 460px;
     background-size: cover;
