--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -29,9 +29,9 @@
         left: 0;
         transform: translatex(100%);
         transition: .5s;
-        width: 100%;
-        height: 100%;
-        background-color: #000;
+        width: 100vw;
+        height: 100vh;
+        background-color: #000; 
     }
 
     .open {
