--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -68,6 +68,7 @@
         text-align: center;
         padding: 10px;
         font-weight: bold;
+        width: 100%;
     }
 
     .mobile-menu-icon{
