--- a/src/css/style.css
+++ b/src/css/style.css
@@ -243,12 +243,12 @@ section.about .flex {
 
 
 section.portfolio {
-    padding: 80px 4%;
+    padding: 80px 8%;
     box-shadow: 0 0 40px 10px #ffffff46;
 }
 
 section.portfolio .flex {
-    justify-content: space-around;
+    flex-direction: column;
     flex-wrap: wrap;
     gap: 50px;
 
@@ -258,8 +258,47 @@ section.portfolio h2 {
     margin-bottom: 60px;
 }
 
-.img-port {
+.portfolio .project {
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    flex-wrap: wrap;
 
+}
+
+.project .description-project {
+    width: 60%;
+    margin-top: 20px;
+}
+
+.description-project h3 {
+    font-size: 2.5rem;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.description-project p {
+    font-size: 1.8rem;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.description-project .tecnologias-utilizadas {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+}
+
+.tecnologias-utilizadas .skill-tech {
+    width: 80px;
+}
+
+
+.img-port {
+    order: 2;
     width: 360px;
     height: 460px;
     background-size: cover;
