--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -184,13 +184,28 @@
         width: 70px;
     }
 
+    @keyframes scroll-animation {
+        0%{
+            background-position: 100% 0;
+        }
+    
+        50% {
+            background-position: 100% 100%;
+        }
+    
+        100% {
+            background-position: 100% 0;
+        }
+    }
+
     .img-port {
         max-width: 360px;
         width: 80vw;
         height: 460px;
         background-size: cover;
-        background-position: 100% 0%;
-        transition: background 8s;
+        background-position: auto;
+        animation: scroll-animation 12s infinite ease-in-out;
+        transition: background 0s;
         cursor: pointer;
         border-radius: 30px;
         position: relative;
